--- a/wwwroot/client/index.html
+++ b/wwwroot/client/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="/favicon.ico"/>
+    <link rel="icon" href="client/favicon.ico"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="/logo192.png"/>
-    <link rel="manifest" href="/manifest.json"/>
+    <link rel="manifest" href="client/manifest.json"/>
     <title>React App</title>
-    <script defer="defer" src="/static/js/main.68af4f9f.js"></script>
-    <link href="/static/css/main.8aceb2de.css" rel="stylesheet">
+    <script defer="defer" src="client/static/js/main.a7cd9baa.js"></script>
+    <link href="client/static/css/main.5b6ee547.css" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
